playground/notas_tests/invalid/r3-01.hulk
function dup(x, x) => x;
